syntax = "proto3";
package alliance.alliance;

import "gogoproto/gogo.proto";
import "alliance/alliance.proto";
import "alliance/params.proto";

option go_package = "alliance/x/alliance/types";

// GenesisState defines the module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated AllianceAsset assets = 2 [
    (gogoproto.nullable) = false
  ];
}